--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,11 @@
 			    <artifactId>ueditor</artifactId>
 			    <version>1.1.2</version>
 			</dependency>
+			<dependency>
+			    <groupId>org.json</groupId>
+			    <artifactId>ueditorjson</artifactId>
+			    <version>1.0</version>
+			</dependency>
 			
 		</dependencies>
 	</dependencyManagement>
