--- a/shtyxh-manager/pom.xml
+++ b/shtyxh-manager/pom.xml
@@ -87,7 +87,10 @@
 			    <groupId>com.baidu</groupId>
 			    <artifactId>ueditor</artifactId>
 			</dependency>
-			
+			<dependency>
+			    <groupId>org.json</groupId>
+			    <artifactId>ueditorjson</artifactId>
+			</dependency>
 			<!-- Mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
