--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,16 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+		    <plugin>  
+		        <groupId>org.apache.maven.plugins</groupId>  
+		        <artifactId>maven-war-plugin</artifactId>  
+		        <version>2.4</version>  
+		        <configuration>  
+		              <webXml>WebContent\WEB-INF\web.xml</webXml>  
+		              <warSourceDirectory>WebContent</warSourceDirectory> 
+		        </configuration>  
+		        
+		    </plugin>  
 		</plugins>
 		<!--<pluginManagement>
 			<plugins>
