--- a/shtyxh-manager/pom.xml
+++ b/shtyxh-manager/pom.xml
@@ -176,7 +176,17 @@
 				</includes>
 				<filtering>false</filtering>
 			</resource>
+			
+			 <resource>  
+               <directory>src/main/resources/</directory>  
+               <includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes>
+               <filtering>false</filtering>  
+           </resource>  
 		</resources>
 	</build>
   
+  <packaging>war</packaging>
 </project>
