1.添加文件工程

--- a/shtyxh-manager/pom.xml
+++ b/shtyxh-manager/pom.xml
@@ -186,6 +186,7 @@
                <filtering>false</filtering>  
            </resource>  
 		</resources>
+		<finalName>shtyxh</finalName>
 	</build>
   
   <packaging>war</packaging>
