--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   	<module>shtyxh-manager</module>
   	<module>shtyxh-HTed</module>
   	<module>shtyxh-common</module>
+  	<module>shtyxh-filesystem</module>
   </modules>
   
   	<!-- 集中定义依赖版本号 -->
@@ -50,11 +51,6 @@
 				<version>${joda-time.version}</version>
 			</dependency>
 			<!-- Apache工具组件 -->
-			<dependency>
-			    <groupId>commons-fileupload</groupId>
-			    <artifactId>commons-fileupload</artifactId>
-			    <version>1.3.1</version>
-			</dependency>
 			<dependency>
 			    <groupId>org.slf4j</groupId>
 			    <artifactId>slf4j-api</artifactId>
