--- a/shtyxh-manager/src/main/resources/config.properties
+++ b/shtyxh-manager/src/main/resources/config.properties
@@ -6,6 +6,7 @@ jdbc.password=f,d,r5080
 
 mybatis.identity=JDBC
 
+SHTYXH_SHTYXHSERVER = http://localhost:8080/shtyxh
 
-FILE_FILESERVER = http://192.168.100.109:8080/fileserver
+FILE_FILESERVER = http://localhost:8080/fileserver
 FILE_DELETE_PATH = /fileDelete
