培训与鉴定 数据从redis读取

--- a/shtyxh-manager/src/main/resources/redis.properties
+++ b/shtyxh-manager/src/main/resources/redis.properties
@@ -17,6 +17,7 @@ REDIS_ASSESSMENTTYPE=ASSESSMENTTYPE
 REDIS_ASSESSMENTACTIVITY_HSET = REDIS_ASSESSMENTACTIVITY_HSET
 REDIS_ASSESSMENTTYPE_ASSESSMENTACTIVITY= ASSESSMENTTYPE_ASSESSMENTACTIVITY
 REDIS_ASSESSMENTACTIVITY= ASSESSMENTACTIVITY
+REDIS_ASSESSMENTACTIVITYPAGE_ATTRIBUTEID_NEWS_LIST= ASSESSMENTACTIVITYPAGE_ATTRIBUTEID_NEWS_LIST
 
 REDIS_NEWSSOURCE_HSET = REDIS_NEWSSOURCE_HSET
 REDIS_NEWSSOURCE_ALL_NEWSSOURCE_LIST=NEWSSOURCE_ALL_NEWSSOURCE_LIST
