--- a/shtyxh-manager/src/main/resources/redis.properties
+++ b/shtyxh-manager/src/main/resources/redis.properties
@@ -43,6 +43,7 @@ REDIS_HISTORY_LIST_STRING  = REDIS_HISTORY_LIST_STRING
 REDIS_OFFERS_HSET = REDIS_OFFERS_HSET
 REDIS_OFFERS_ALL_LIST  = OFFERS_ALL_LIST
 REDIS_OFFERS  = OFFERS
+REDIS_OFFERS_TYPE_ALL_LIST  = OFFERS_TYPE_ALL_LIST
 
 
 REDIS_ALLONETEXT_HSET=REDIS_ALLONETEXT_HSET
