1.添加一个本地的访问量统计

--- a/shtyxh-manager/src/main/resources/redis.properties
+++ b/shtyxh-manager/src/main/resources/redis.properties
@@ -56,4 +56,6 @@ REDIS_NEWSDYNAMICSPAGE=REDIS_NEWSDYNAMICSPAGE
 REDIS_NEWSDYNAMICSPAGE_THUMBNAIL_NEWS_LIST= REDIS_NEWSDYNAMICSPAGE_THUMBNAIL_NEWS_LIST
 REDIS_NEWSDYNAMICSPAGE_TOPNEWS_LIST=REDIS_NEWSDYNAMICSPAGE_TOPNEWS_LIST
 
+REDIS_VISITCOUNT_INT=REDIS_VISITCOUNT_INT
+
 
