--- a/shtyxh-manager/WebContent/WEB-INF/web.xml
+++ b/shtyxh-manager/WebContent/WEB-INF/web.xml
@@ -25,6 +25,11 @@
 	  <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+     <listener>
+        <listener-class>com.shtyxh.manager.listener.VisitCountListener</listener-class>
+    </listener>
+    
     <filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
