1.添加消息通知

--- a/shtyxh-manager/src/main/resources/redis.properties
+++ b/shtyxh-manager/src/main/resources/redis.properties
@@ -32,6 +32,7 @@ REDIS_NEWSPAGE_ATTRIBUTEID_NEWS_LIST= NEWSPAGE_ATTRIBUTEID_NEWS_LIST
 
 
 REDIS_CAROUSEL_LIST_STRING = REDIS_CAROUSEL_LIST_STRING
+REDIS_NOTICE_LIST_STRING = REDIS_NOTICE_LIST_STRING
 REDIS_DOWNLOAD_LIST_STRING = REDIS_DOWNLOAD_LIST_STRING
 
 
