1.添加短视频模块

--- a/shtyxh-manager/src/main/resources/redis.properties
+++ b/shtyxh-manager/src/main/resources/redis.properties
@@ -46,6 +46,9 @@ REDIS_OFFERS_ALL_LIST  = OFFERS_ALL_LIST
 REDIS_OFFERS  = OFFERS
 REDIS_OFFERS_TYPE_ALL_LIST  = OFFERS_TYPE_ALL_LIST
 
+REDIS_VIDEO_HSET = REDIS_VIDEO_HSET
+REDIS_VIDEO_TYPE_ALL_LIST = VIDEO_TYPE_ALL_LIST
+
 
 REDIS_ALLONETEXT_HSET=REDIS_ALLONETEXT_HSET
 REDIS_ALLONETEXT=ALLONETEXT
