--- a/shtyxh-manager/src/main/resources/config.properties
+++ b/shtyxh-manager/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:8830/shtyxh_dev
+jdbc.url=jdbc:mysql://127.0.0.1:8830/shtyxh_dev
 jdbc.username=root
 jdbc.password=f,d,r5080
 
